# posh-fzf

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: get_history_recent_commands.rs  history_bench.rs
resource/: init.ps1  posh-fzf.ps1
scripts/: watch.ps1
src/: args.rs  history.rs  lib.rs  main.rs  timings.rs  util.rs
