[package]
name = "posh-fzf"
version = "0.1.4"
edition = "2021"
authors = ["Dom Slee <domslee1@gmail.com>"]
description = "Fzf keybinding integration for powershell"
repository = "https://github.com/domsleee/posh-fzf"
license = "MIT"
keywords = ["powershell", "pwsh", "fzf", "fuzzy", "keybindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
indexmap = "2.0.0"

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
