[package]
name = "posh-fzf"
version = "0.2.8"
edition = "2024"
authors = ["Dom Slee <domslee1@gmail.com>"]
description = "Fzf keybinding integration for powershell"
repository = "https://github.com/domsleee/posh-fzf"
license = "MIT"
keywords = ["powershell", "pwsh", "fzf", "fuzzy", "keybindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
clap = { version = "4.5.37", features = ["derive"] }
dirs-next = "2.0.0"
indexmap = "2.9.0"

[dev-dependencies]
tempfile = "3.19"
criterion = "0.5"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[[bench]]
name = "history_bench"
harness = false
